# welding-robot

./: README.md
111/: .setup_assistant
111/config/: fake_controllers.yaml  ompl_planning.yaml  ros_controllers.yaml
111/launch/: chomp_planning_pipeline.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  planning_context.launch  ros_controllers.launch  sensor_manager.launch.xml  weldingtable_moveit_controller_manager.launch.xml
CAD2pointcloud/CAD2pointcloud/: CMakeLists.txt  package.xml
CAD2pointcloud/CAD2pointcloud/include/: CAD2pointcloud_transformation.h
CAD2pointcloud/CAD2pointcloud/src/: CAD2pointcloud_transformation.cpp  main.cpp
CAD2pointcloud/launch/: CMakeLists.txt  package.xml
ar_track_alvar/ar_track_alvar/launch/: ar_indiv.launch
ar_track_alvar/ar_track_alvar/nodes/: IndividualMarkers.cpp  IndividualMarkersNoKinect.cpp
ar_track_alvar/ar_track_alvar/test/: marker_abstract.launch.xml  marker_arg_config-basic.test  marker_param_config-basic.test
control/: calibration.py  control.py  control_Moveit.py  control_URx.py  imu_process.py
model_reconstruction/: kinect-pointcloud-generation.cpp
model_reconstruction/launch/: CMakeLists.txt  model_reconstruction.launch  package.xml
model_reconstruction/reconstruction/: CMakeLists.txt  package.xml  pc_transform.py  send_capture_command.py
model_reconstruction/reconstruction/src/: main.cpp  reconstruction_transformation.cpp  transformation.cpp
model_reconstruction/vg_Rcontrol/: CMakeLists.txt  control_URx.py  package.xml
model_reconstruction/vg_transform/: CMakeLists.txt  package.xml
model_reconstruction/vg_transform/src/: main.cpp
motion_planning1executing/traj_control_execution/: CMakeLists.txt  control_Moveit.py  control_URx.py  package.xml
motion_planning1executing/traj_control_execution/trajectoryURx_csv/: Y-shape.csv  box.csv  box1.csv  box2.csv  box3.csv  straight.csv  test.csv  test1.csv  test2.csv  test3.csv  tube.csv
motion_planning1executing/trajectory_planning/: CMakeLists.txt
motion_planning1executing/trajectory_planning/include/: main.h  motion_planning.h  running_flow.h  seam_location.h  transformation.h
planning/: CMakeLists.txt  package.xml  planning.py
planning/launch/: planning.launch
pointcloud_dataset/Fri_Apr_3_22_30_43/: 1_frame.txt  2_frame.txt  3_frame.txt
pointcloud_dataset/Thu_Apr_2_10_14_30/: 1_frame.txt  2_frame.txt  3_frame.pcd  3_frame.txt  4_frame.txt  5_frame.pcd  5_frame.txt  6_frame.pcd  6_frame.txt  7_frame.txt  8_frame.txt  9_frame.txt
pointcloud_dataset/Thu_Apr_2_19_07_56/: 1_frame.txt  2_frame.txt  3_frame.txt
pointcloud_dataset/box/: 1_frame.txt  2_frame.txt  3_frame.txt  4_frame.txt  5_frame.txt
pointcloud_dataset/curve/: 1_frame.txt  2_frame.txt  3_frame.txt
pointcloud_processing/: CMakeLists.txt
pointcloud_processing/include/: motion_planning.h  seam_location.h
pointcloud_processing/src/: main.cpp  motion_planning.cpp  seam_location.cpp  transformation.cpp
robot_configuration/moveit_config/: .setup_assistant  package.xml
robot_description/kinect2_description/: default_config.rviz
robot_description/ur-description/: CMakeLists.txt  package.xml
robot_description/ur_description_/: CMakeLists.txt  package.xml
robot_description/welding_support/: CMakeLists.txt  package.xml
robot_moveit/: .setup_assistant  CMakeLists.txt  package.xml
robot_moveit/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  kinematics (copy).yaml  kinematics.yaml  weldingtable.srdf
robot_moveit/launch/: default_warehouse_db.launch  demo.launch  demo_gazebo.launch  gazebo.launch  move_group.launch  moveit.rviz  planning_context.launch  robot_planning.launch  warehouse.launch  weldingtable_moveit_controller_manager.launch.xml
robot_sensor_calibration/: CMakeLists.txt  package.xml  robot_sensor_calibration.launch
robot_sensor_calibration/calibration_computing/: CMakeLists.txt  package.xml
robot_sensor_calibration/calibration_validation/: CMakeLists.txt  package.xml
robot_sensor_calibration/calibration_validation/include/: reconstruction_transformation.h
robot_sensor_calibration/calibration_validation/src/: main.cpp  transformation.cpp
robot_sensor_calibration/include/: algorithm.h
robot_sensor_calibration/launch/: CMakeLists.txt  package.xml  robot_sensor_calibration.launch
robot_sensor_calibration/rs_calibration_robotcontrol/: CMakeLists.txt  calibration.py  control_URx.py  package.xml
robot_sensor_calibration/src/: algorithm.cpp  main.cpp
robot_visuoguiding/: CMakeLists.txt  package.xml
robot_visuoguiding/src/: algorithm.cpp  main.cpp
seam_detection/: CMakeLists.txt  package.xml
seam_detection/include/: algorithm.h  transformation.h
seam_detection/launch/: seam_detection.launch
seam_detection/src/: algorithm.cpp  main.cpp  surface_normalestimation.cpp
src/ar_track_alvar/: README
src/ar_track_alvar/ar_track_alvar/: CMakeLists.txt
src/ar_track_alvar/ar_track_alvar/launch/: ar_indiv.launch  pr2_indiv.launch
src/ar_track_alvar/ar_track_alvar/test/: marker_arg_config-full.test  marker_param_config-full.test
src/control/: CMakeLists.txt  package.xml
src/pointcloud_processing/: package.xml
surface_reconstruction/: CMakeLists.txt  package.xml
surface_reconstruction/src/: main.cpp
trajectory_planning/: CMakeLists.txt  package.xml
trajectory_planning/include/: motion_planning.h  seam_location.h  transformation.h
trajectory_planning/src/: input_cloud.pcd  main.cpp  motion_planning.cpp  seam_location.cpp  transformation.cpp
weldingrobot/: ikfast61_manipulator.cpp
weldingrobot/moveit_config/: .setup_assistant
weldingrobot/weldingrobot_ikfast_manipulator_plugin/: CMakeLists.txt  package.xml  update_ikfast_plugin.sh  weldingrobot_manipulator_moveit_ikfast_plugin_description.xml
weldingrobot/weldingrobot_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
weldingrobot_sensor_calibration/: CMakeLists.txt
weldingrobot_sensor_calibration/ar_track_alvar/: ar_track_alvar.rosinstall
weldingrobot_sensor_calibration/calibration/: package.xml
(+110 files in other folders)
